12220 loader multi-console shouldn't override bootenv.rc Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>